testing/cilium-l7-policy.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: enable-l7-http-inspection
  namespace: demo
spec:
  # Apply to all pods in demo namespace
  endpointSelector: {}
  
  # Allow ingress HTTP traffic with L7 inspection
  ingress:
  - toPorts:
    - ports:
      - port: "80"
        protocol: TCP
      rules:
        http:
        - method: ".*"  # Allow all HTTP methods (GET, POST, etc.)
  
  # Allow egress HTTP traffic with L7 inspection  
  egress:
  - toPorts:
    - ports:
      - port: "80"
        protocol: TCP
      rules:
        http:
        - method: ".*"  # Allow all HTTP methods
  
  # Allow all other traffic (DNS, other ports)
  - toEntities:
    - cluster
    - world
